// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Component: CloseIconBlack CloseIconBlack renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 14 14"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: EmailIcon EmailIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitChevronRightIcon NewsKitChevronRightIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="css-3rbz36"
    fill="currentcolor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
      fill="currentcolor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitCloseIcon NewsKitCloseIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    class="css-ny3roy"
    fill="none"
    height="24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="24"
      id="closeIconMask"
      maskUnits="userSpaceOnUse"
      style="mask-type: alpha;"
      width="24"
      x="0"
      y="0"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
      />
    </mask>
    <g
      mask="url(#closeIconMask)"
    >
      <path
        d="M0 0h24v24H0z"
        fill="currentcolor"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitFilledArrowIcon NewsKitFilledArrowIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    class="css-ny3roy"
    fill="none"
    height="16"
    width="17"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m3.166 8 .94.94 3.727-3.72v8.113h1.333V5.22l3.72 3.727.947-.947-5.334-5.333L3.166 8Z"
      fill="currentcolor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitFilledArrowIconDown NewsKitFilledArrowIconDown renders with default props 1`] = `
<DocumentFragment>
  <svg
    class="css-10up5ig"
    fill="none"
    height="16"
    width="17"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m3.166 8 .94.94 3.727-3.72v8.113h1.333V5.22l3.72 3.727.947-.947-5.334-5.333L3.166 8Z"
      fill="currentcolor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitThumbsDownIcon NewsKitThumbsDownIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    class="css-ny3roy"
    fill="none"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="16"
      id="mask0_3105_40978"
      maskUnits="userSpaceOnUse"
      style="mask-type: alpha;"
      width="16"
      x="8"
      y="8"
    >
      <path
        clip-rule="evenodd"
        d="M18 9.33301H12C11.4466 9.33301 10.9733 9.66634 10.7733 10.1463L8.75996 14.8463C8.69996 14.9997 8.66663 15.1597 8.66663 15.333V16.6663C8.66663 17.3997 9.26663 17.9997 9.99996 17.9997H14.2066L13.5733 21.0463L13.5533 21.2597C13.5533 21.533 13.6666 21.7863 13.8466 21.9663L14.5533 22.6663L18.94 18.273C19.1866 18.033 19.3333 17.6997 19.3333 17.333V10.6663C19.3333 9.93301 18.7333 9.33301 18 9.33301ZM18 17.333L15.1066 20.2263L15.8466 16.6663H9.99996V15.333L12 10.6663H18V17.333ZM23.3333 9.33301H20.6666V17.333H23.3333V9.33301Z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </mask>
    <g
      mask="url(#mask0_3105_40978)"
    >
      <rect
        fill="currentcolor"
        height="16"
        width="16"
        x="8"
        y="8"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitThumbsUpIcon NewsKitThumbsUpIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    class="css-ny3roy"
    fill="none"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="32"
      id="mask0_3112_40861"
      maskUnits="userSpaceOnUse"
      style="mask-type: alpha;"
      width="32"
      x="8"
      y="8"
    >
      <path
        clip-rule="evenodd"
        d="M22 13.9997H17.7933L18.4266 10.953L18.4466 10.7397C18.4466 10.4663 18.3333 10.213 18.1533 10.033L17.4466 9.33301L13.06 13.7263C12.8133 13.9663 12.6666 14.2997 12.6666 14.6663V21.333C12.6666 22.0663 13.2666 22.6663 14 22.6663H20C20.5533 22.6663 21.0266 22.333 21.2266 21.853L23.24 17.153C23.3 16.9997 23.3333 16.8397 23.3333 16.6663V15.333C23.3333 14.5997 22.7333 13.9997 22 13.9997ZM22 16.6663L20 21.333H14V14.6663L16.8933 11.773L16.1533 15.333H22V16.6663ZM11.3333 14.6663H8.66663V22.6663H11.3333V14.6663Z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </mask>
    <g
      mask="url(#mask0_3112_40861)"
    >
      <rect
        fill="currentcolor"
        height="16"
        width="16"
        x="8"
        y="8"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: NewsKitTooltipIcon NewsKitTooltipIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    class="css-ny3roy"
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="16"
      id="a"
      maskUnits="userSpaceOnUse"
      style="mask-type: alpha;"
      width="16"
      x="0"
      y="0"
    >
      <path
        d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
        fill="currentcolor"
      />
      <path
        clip-rule="evenodd"
        d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </mask>
    <g
      mask="url(#a)"
    >
      <path
        d="M0 0h16v16H0z"
        fill="currentcolor"
      />
    </g>
  </svg>
</DocumentFragment>
`;
